--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
   src: url('https://cdn.jsdelivr.net/npm/open-dyslexic@1.0.3/woff/OpenDyslexic-Regular.woff') format('woff');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -14,28 +15,34 @@
   src: url('https://cdn.jsdelivr.net/npm/open-dyslexic@1.0.3/woff/OpenDyslexic-Bold.woff') format('woff');
   font-weight: bold;
   font-style: normal;
+  font-display: swap;
+}
+
+:root {
+  --primary-color: #4526CE;
+  --primary-dark: #3419A7;
+}
+
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  overflow-x: hidden;
+  position: relative;
+  min-height: 100vh;
 }
 
 body {
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow-x: hidden;
-  position: relative;
-  width: 100%;
+  touch-action: pan-y;
 }
 
 .font-dyslexic {
-  font-family: 'OpenDyslexic', sans-serif;
-}
-
-html {
-  overflow-x: hidden;
-  position: relative;
-  width: 100%;
+  font-family: 'OpenDyslexic', sans-serif !important;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
